--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "slim_simple",
   "dependencies": {
-    "gentelella": "^1.3.0"
+    "gentelella": "^1.3.0",
+    "jquery": "^3.1.1"
   }
 }
