--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "slim/twig-view": "^2.1",
     "slim/flash": "^0.1.0",
     "slim/csrf": "^0.6.0",
-    "vlucas/phpdotenv": "^2.4"
+    "vlucas/phpdotenv": "^2.4",
+    "yezuozuo/venus": "^0.1.0",
+    "callwoola/php-split": "^1.1"
   },
   "autoload": {
     "psr-4": {
